--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-router": "^1.58.16",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
