--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,6 +17,7 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
+    "strictPropertyInitialization": false,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
