--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.447.0",
     "mapbox-gl": "^3.7.0",
     "react": "^18.3.1",
+    "react-dadata": "^2.23.3",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
