fix: some env issues + update readme

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_MAPBOX_TOKEN=           # ACCESS TOKEN FOR MAPBOX MAP
-VITE_BASE_API_URL=               # BASE API URL
+VITE_BASE_API_URL=           # BASE API URL
+
+VITE_DEBUG=                  # RUN TANSTACK ROUTER DEVTOOLS
